feat: Continued with the controller of the login page
- TBD, make the windows movable